// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TOS Banner Container does not render if not isVisible 1`] = `
<div
  className="tos-banner"
>
  <p>
    By using Semester.ly you agree to our
    <a
      href="/termsofservice"
      rel="noopener noreferrer"
      target="_blank"
    >
      Terms of Service
    </a>
    and
    <a
      href="/privacypolicy"
      rel="noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
    </a>
  </p>
  <div
    className="tos-banner__close"
    onClick={[Function]}
  >
    <i
      className="fa fa-times"
    />
  </div>
</div>
`;

exports[`TOS Banner Container renders if isVisible 1`] = `
<div
  className="tos-banner show"
>
  <p>
    By using Semester.ly you agree to our
    <a
      href="/termsofservice"
      rel="noopener noreferrer"
      target="_blank"
    >
      Terms of Service
    </a>
    and
    <a
      href="/privacypolicy"
      rel="noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
    </a>
  </p>
  <div
    className="tos-banner__close"
    onClick={[Function]}
  >
    <i
      className="fa fa-times"
    />
  </div>
</div>
`;
